# compute-horde-prompt-solver

./: .gitignore  Dockerfile  README.md  contstraints.txt  download_model.py  pyproject.toml  pytest.ini
.github/workflows/: cd-prod.yml  cd-staging.yml  ci.yml
src/compute_horde_prompt_solver/: __main__.py  config.py  prompt_solver.py  run.py
tests/: conftest.py
tests/integration_mock/: test_mock.py
tests/integration_real_llm/: test_real_llm.py
tests/payload/: expected_mock_1234567891_output.json  expected_mock_99_output.json  expected_real_1234567891_output.json  expected_real_99_output.json  prompts.txt
